--- a/aec.html
+++ b/aec.html
@@ -1,1 +1,165 @@
-<script language=javascript>document.write(unescape('%3C%73%63%72%69%70%74%20%6C%61%6E%67%75%61%67%65%3D%22%6A%61%76%61%73%63%72%69%70%74%22%3E%66%75%6E%63%74%69%6F%6E%20%64%46%28%73%29%7B%76%61%72%20%73%31%3D%75%6E%65%73%63%61%70%65%28%73%2E%73%75%62%73%74%72%28%30%2C%73%2E%6C%65%6E%67%74%68%2D%31%29%29%3B%20%76%61%72%20%74%3D%27%27%3B%66%6F%72%28%69%3D%30%3B%69%3C%73%31%2E%6C%65%6E%67%74%68%3B%69%2B%2B%29%74%2B%3D%53%74%72%69%6E%67%2E%66%72%6F%6D%43%68%61%72%43%6F%64%65%28%73%31%2E%63%68%61%72%43%6F%64%65%41%74%28%69%29%2D%73%2E%73%75%62%73%74%72%28%73%2E%6C%65%6E%67%74%68%2D%31%2C%31%29%29%3B%64%6F%63%75%6D%65%6E%74%2E%77%72%69%74%65%28%75%6E%65%73%63%61%70%65%28%74%29%29%3B%7D%3C%2F%73%63%72%69%70%74%3E'));dF('*8Hnkwfrj*75xwh*8I*77myyux*8F44nis3liuqf%7Ejwy%7B3yt4jrgji4fxywt2fjh4*77*75%7Cniym*8I*77655*7%3A*77*75mjnlmy*8I*77655*7%3A*77*75xhwtqqnsl*8I*77st*77*75kwfrjgtwijw*8I*775*77*75qtfinsl*8I*77qf%7F%7E*77*75fqqt%7C*8I*77fhhjqjwtrjyjw*8G*75fzytuqf%7E*8G*75jshw%7Euyji2rjinf*8G*75l%7Ewtxhtuj*8G*75unhyzwj2ns2unhyzwj*8G*75kzqqxhwjjs*8G*75ljtqthfynts*8G*75%7Cjg2xmfwj*8G*75xujfpjw2xjqjhynts*8G*75xhwjjs2%7Cfpj2qthp*8G*75niqj2ijyjhynts*77*75fqqt%7Ckzqqxhwjjs*8J*8H4nkwfrj*8J5')</script>
+<!DOCTYPE html>
+<html lang="my">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta name="description" content="Tonton Astro AEC secara langsung dalam kualiti HD secara percuma. Saluran hiburan Cina 24/7 hanya di TV Malaysia Live." />
+    <meta name="keywords" content="Astro AEC, saluran Cina, hiburan Cina, tonton TV Malaysia, siaran langsung percuma, AEC HD, drama Mandarin, Astro Chinese live" />
+    <meta name="author" content="TV Malaysia Live" />
+    <title>Tonton Astro AEC Live HD | TV Malaysia Live</title>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BroadcastService",
+        "name": "Astro AEC",
+        "broadcastDisplayName": "Astro AEC Live HD",
+        "broadcastTimezone": "Asia/Kuala_Lumpur",
+        "broadcaster": { "@type": "Organization", "name": "TV Malaysia Live", "url": "https://www.tvmalaysia.live" },
+        "videoFormat": "HD",
+        "broadcastFrequency": "PT24H"
+    }
+    </script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TLN0VD2V7C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag("js", new Date());
+        gtag("config", "G-TLN0VD2V7C", { anonymize_ip: true });
+    </script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3274439619257410" crossorigin="anonymous"></script>
+
+    <link rel="icon" href="https://www.tvmalaysia.live/favicon.ico" type="image/x-icon" />
+    <meta property="og:title" content="Tonton Astro AEC Live HD | TV Malaysia Live" />
+    <meta property="og:description" content="Tonton Astro AEC secara langsung dalam kualiti HD tanpa sebarang bayaran. Siaran hiburan Cina 24/7 percuma." />
+    <meta property="og:image" content="https://www.tvmalaysia.live/images/astro-aec-live-streaming-online.webp" />
+    <meta property="og:url" content="https://www.tvmalaysia.live/channel/astro-aec" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.1.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.1.1/controls.min.css" crossorigin="anonymous" />
+
+    <style>
+        html, body { margin: 0; padding: 0; background-color: white; }
+        #player-container { width: 100%; height: 680px; background: black; }
+        video { width: 100%; height: 100%; }
+    </style>
+</head>
+
+<body>
+    <center>
+        <ins class="adsbygoogle" style="display: block;" data-ad-client="ca-pub-3274439619257410" data-ad-slot="7682342688" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+        <div id="stream">
+            <div id="player-container" data-shaka-player-container>
+                <video autoplay playsinline controls data-shaka-player></video>
+            </div>
+        </div>
+
+        <br />
+
+        <ins class="adsbygoogle" style="display: block;" data-ad-client="ca-pub-3274439619257410" data-ad-slot="7682342688" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6631b8f57464820019156342&product=sop" async="async"></script>
+        <div class="sharethis-inline-share-buttons" aria-label="Kongsi siaran ini"></div>
+
+        <h1>Astro AEC online live streaming</h1>
+        <div class="separator" style="clear: both;">
+            <a href="#" style="display: block; padding: 1em 0; text-align: center;">
+                <img alt="Tonton Astro AEC Live Streaming" border="0" width="50" src="https://www.tvmalaysia.live/images/astro-aec-live-streaming-online.webp" loading="lazy" />
+            </a>
+        </div>
+    </center>
+
+    <center><div id="channel-list" aria-live="polite">Loading channel list...</div></center>
+
+    <script defer>
+        fetch("https://api.npoint.io/42ec6ec5b5c92e25f36f?t=" + new Date().getTime(), { cache: "force-cache" })
+            .then(res => res.json())
+            .then(data => {
+                document.getElementById("channel-list").innerHTML = data.html;
+            })
+            .catch(err => {
+                console.error("Gagal load senarai channel:", err);
+                document.getElementById("channel-list").innerText = "Gagal memuatkan saluran.";
+            });
+    </script>
+
+    <script defer src="/js/anti_copy.js"></script>
+
+    <script>
+        (function (s, u, z, p) {
+            s.src = u;
+            s.setAttribute("data-zone", z);
+            p.appendChild(s);
+        })(document.createElement("script"), "https://jouwaikekaivep.net/tag.min.js", 7337458, document.body || document.documentElement);
+    </script>
+
+    <script>
+        async function initPlayer() {
+            const video = document.querySelector('video');
+            const ui = video['ui'];
+            const controls = ui.getControls();
+            const player = controls.getPlayer();
+
+            // Fetch token dari nPoint
+            let token = '';
+            try {
+                const res = await fetch('https://www.npoint.io/docs/be2f8f200b5bb9130bdb');
+                const data = await res.json();
+                token = data.token || '';
+            } catch (e) {
+                console.error('Error fetching token:', e);
+            }
+
+            // Configure ClearKey
+            player.configure({
+                drm: {
+                    clearKeys: {
+                        "655b6df8085d4fe6b3f71c0f4288f98a": "5f0d4251e05e0a3a661218169ee84181",
+                        "d66e2fe5f045426195d432802f9ba807": "6fe283a6f1f3a3fb69f82c4340e0dde2"
+                    }
+                }
+            });
+
+            // Inject Authorization token
+            player.getNetworkingEngine().registerRequestFilter((type, request) => {
+                if ((type === shaka.net.NetworkingEngine.RequestType.SEGMENT || type === shaka.net.NetworkingEngine.RequestType.MANIFEST) && token) {
+                    request.headers['authorization'] = token;
+                }
+            });
+
+            try {
+                await player.load('https://l04.dp.sooka.my/2400/linear/index.mpd');
+                console.log('Stream loaded successfully!');
+            } catch (e) {
+                console.error('Error loading stream:', e);
+            }
+        }
+
+        document.addEventListener('shaka-ui-loaded', initPlayer);
+    </script>
+
+    <br />
+    <center>
+        <font color="#9900FF">
+            <b>
+                <a href="https://www.tvmalaysia.live/p/about-us">About Us</a> / 
+                <a href="https://www.tvmalaysia.live/p/contact-us">Contact Us</a> / 
+                <a href="https://www.tvmalaysia.live/p/tos">TOS</a> / 
+                <a href="https://www.tvmalaysia.live/p/dmca">DMCA</a> / 
+                <a href="https://www.tvmalaysia.live/p/privacy-policy">Privacy Policy</a> / 
+                <a href="https://www.tvmalaysia.live/p/disclaimer">Disclaimer</a>
+            </b>
+        </font>
+        <p>&copy; <span id="year"></span> TV Malaysia Live</p>
+    </center>
+
+    <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
+    <script integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z" src="https://instant.page/5.2.0" type="module"></script>
+</body>
+</html>
